# Transkripte_GK_SP

./: .gitignore  README.md  main.py  pyproject.toml
Transcript/: transcript.txt
